CSS tweaks to make unnecessary scrollbar disappear. - scrollbar no longer shows when content is smaller than the screen - margins at the top and bottom of the outermost containers are now correct

--- a/css/battle.css
+++ b/css/battle.css
@@ -1,10 +1,3 @@
-/* in order to size the game canvas according to screen size relatively, all
-   its parents' size must be explicit, so give html and body 100% */
-body,html {
-    width: 100%;
-    height: 100%;
-}
-
 /* the canvas element where the game (WebGL) scene is rendered */
 canvas#battleCanvas {
     width: 90%;
